feat: 重构后端权限校验机制并补齐权限缓存一致性
  -新增声明式权限校验方案（@PermissionModule + @PermissionAction + CrudPermissionAspect），7个 controller 从手写 @SaCheckPermission 迁移为注解驱动，非标准端点保留手写校验
  -删除废弃的 common/imports 导入框架（11个文件零引用）、无实现价值的接口 scaffolding（BatchDeleteController/StatusUpdateController/TreeController）及孤儿死代码（LifestyleTextConverter、CacheConstant 冗余常量）
  -新增 PermissionService 缓存角色/权限查询结果，并为 RoleServiceImpl/MenuServiceImpl 的全部写操作补齐 @CacheEvict，修复此前角色停用、菜单增删改状态变更后权限缓存未失效的一致性缺口
  -新增 PermissionCacheConsistencyTest 用 @SpyBean 验证缓存命中与失效行为，统一白名单路径配置消除 AuthInterceptor 与 WebMvcConfig 的重复漂移

提交人：陈鸿昇