@@ -1,10 +1,16 @@
 package com.project.backend.system.service;
 
 import com.project.core.context.UserContext;
+import com.project.core.exception.BusinessException;
 import com.project.backend.system.dto.ChangePasswordDTO;
 import com.project.backend.system.dto.UserSaveDTO;
 import com.project.backend.system.entity.User;
+import com.project.backend.system.mapper.MenuMapper;
+import com.project.backend.system.mapper.RoleMapper;
+import com.project.backend.system.mapper.RoleMenuMapper;
 import com.project.backend.system.mapper.UserMapper;
+import com.project.backend.system.mapper.UserMenuMapper;
+import com.project.backend.system.mapper.UserRoleMapper;
 import com.project.backend.system.service.impl.UserServiceImpl;
 import com.project.backend.system.vo.UserVO;
 import org.junit.jupiter.api.AfterEach;
@@ -15,9 +21,11 @@ import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
+import org.springframework.test.util.ReflectionTestUtils;
 
 import java.time.LocalDateTime;
-import java.util.Arrays;
+import java.util.Collections;
+import java.util.List;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
@@ -30,19 +38,31 @@ import static org.mockito.Mockito.when;
 
 /**
  * 用户服务测试
- *
- * 测试要点
- * 1. 使用Mockito模拟依赖
- * 2. 测试正常场景和异常场景
- * 3. 验证方法调用次数
- * 4. 使用AssertJ进行断言
  */
 @ExtendWith(MockitoExtension.class)
 @DisplayName("用户服务测试")
-public class UserServiceTest {
+class UserServiceTest {
 
     @Mock
     private UserMapper userMapper;
+
+    @Mock
+    private UserRoleMapper userRoleMapper;
+
+    @Mock
+    private RoleMapper roleMapper;
+
+    @Mock
+    private UserMenuMapper userMenuMapper;
+
+    @Mock
+    private RoleMenuMapper roleMenuMapper;
+
+    @Mock
+    private MenuMapper menuMapper;
+
+    @Mock
+    private UserOnlineService userOnlineService;
 
     @InjectMocks
     private UserServiceImpl userService;
@@ -52,9 +72,11 @@ public class UserServiceTest {
 
     @BeforeEach
     void setUp() {
-        // 初始化测试数据
+        ReflectionTestUtils.setField(userService, "baseMapper", userMapper);
+        ReflectionTestUtils.setField(userService, "defaultPassword", "123456");
+
         testUser = new User();
-        testUser.setId(1L);
+        testUser.setId(2L);
         testUser.setUsername("testuser");
         testUser.setPassword("$2a$10$encodedPassword");
         testUser.setNickname("测试用户");
@@ -66,7 +88,7 @@ public class UserServiceTest {
         testUser.setDeleted(0);
 
         userSaveDTO = new UserSaveDTO();
-        userSaveDTO.setUsername("testuser");
+        userSaveDTO.setUsername("newuser");
         userSaveDTO.setPassword("password123");
         userSaveDTO.setNickname("测试用户");
         userSaveDTO.setPhone("13800138000");
@@ -83,16 +105,17 @@ public class UserServiceTest {
     @Test
     @DisplayName("创建用户-成功")
     void testCreateUser_Success() {
-        // Given
-        // 使用 spy mock count 方法（因 count 是 ServiceImpl 的方法）
         UserServiceImpl spyService = org.mockito.Mockito.spy(userService);
+        ReflectionTestUtils.setField(spyService, "baseMapper", userMapper);
         doReturn(0L).when(spyService).count(any());
-        when(userMapper.insert(any(User.class))).thenReturn(1);
+        when(userMapper.insert(any(User.class))).thenAnswer(invocation -> {
+            User user = invocation.getArgument(0);
+            user.setId(100L);
+            return 1;
+        });
 
-        // When
         boolean result = spyService.saveUser(userSaveDTO);
 
-        // Then
         assertThat(result).isTrue();
         verify(spyService, times(1)).count(any());
         verify(userMapper, times(1)).insert(any(User.class));
@@ -118,86 +141,82 @@ public class UserServiceTest {
     @Test
     @DisplayName("根据ID获取用户-成功")
     void testGetDetailById_Success() {
-        // Given
-        when(userMapper.selectById(1L)).thenReturn(testUser);
+        when(userMapper.selectById(2L)).thenReturn(testUser);
+        when(roleMapper.selectRoleIdsByUserId(2L)).thenReturn(Collections.emptyList());
+        when(roleMapper.selectRoleNamesByUserId(2L)).thenReturn(Collections.emptyList());
+        when(userOnlineService.isUserOnline(2L)).thenReturn(false);
 
-        // When
-        UserVO userVO = userService.getDetailById(1L);
+        UserVO userVO = userService.getDetailById(2L);
 
-        // Then
         assertThat(userVO).isNotNull();
         assertThat(userVO.getUsername()).isEqualTo("testuser");
-        assertThat(userVO.getNickname()).isEqualTo("测试用户");
-        verify(userMapper, times(1)).selectById(1L);
+        verify(userMapper, times(1)).selectById(2L);
     }
 
     @Test
     @DisplayName("根据ID获取用户-用户不存在")
     void testGetDetailById_NotFound() {
-        // Given
         when(userMapper.selectById(999L)).thenReturn(null);
 
-        // When
-        UserVO userVO = userService.getDetailById(999L);
-
-        // Then
-        assertThat(userVO).isNull();
-        verify(userMapper, times(1)).selectById(999L);
+        assertThatThrownBy(() -> userService.getDetailById(999L))
+                .isInstanceOf(BusinessException.class)
+                .hasMessageContaining("用户不存在");
     }
 
     @Test
     @DisplayName("更新用户-成功")
     void testUpdateUser_Success() {
-        // Given
         UserSaveDTO updateUserDTO = new UserSaveDTO();
-        updateUserDTO.setId(1L);
+        updateUserDTO.setId(2L);
+        updateUserDTO.setUsername("testuser");
         updateUserDTO.setNickname("更新后的用户");
         updateUserDTO.setPhone("13900139000");
 
-        when(userMapper.selectById(1L)).thenReturn(testUser);
+        UserServiceImpl spyService = org.mockito.Mockito.spy(userService);
+        ReflectionTestUtils.setField(spyService, "baseMapper", userMapper);
+        doReturn(0L).when(spyService).count(any());
+        when(userMapper.selectById(2L)).thenReturn(testUser);
         when(userMapper.updateById(any(User.class))).thenReturn(1);
 
-        // When
-        boolean result = userService.saveUser(updateUserDTO);
+        boolean result = spyService.saveUser(updateUserDTO);
 
-        // Then
         assertThat(result).isTrue();
-        verify(userMapper, times(1)).selectById(1L);
+        verify(userMapper, times(1)).selectById(2L);
         verify(userMapper, times(1)).updateById(any(User.class));
     }
 
     @Test
     @DisplayName("删除用户-成功")
     void testDeleteUser_Success() {
-        // Given
-        when(userMapper.selectById(1L)).thenReturn(testUser);
-        when(userMapper.deleteById(1L)).thenReturn(1);
+        when(userMapper.selectById(2L)).thenReturn(testUser);
+        when(roleMapper.selectRoleCodesByUserId(2L)).thenReturn(Collections.emptyList());
+        when(userRoleMapper.delete(any())).thenReturn(1);
+        when(userMenuMapper.delete(any())).thenReturn(1);
 
-        // When
-        boolean result = userService.deleteUser(1L);
+        UserServiceImpl spyService = org.mockito.Mockito.spy(userService);
+        doReturn(true).when(spyService).removeById(2L);
 
-        // Then
+        boolean result = spyService.deleteUser(2L);
+
         assertThat(result).isTrue();
-        verify(userMapper, times(1)).deleteById(1L);
+        verify(spyService, times(1)).removeById(2L);
     }
 
     @Test
-    @DisplayName("分页查询用户-成功")
-    void testPageList_Success() {
-        // Given
-        User user2 = new User();
-        user2.setId(2L);
-        user2.setUsername("user2");
-        user2.setNickname("用户2");
+    @DisplayName("不能删除超级管理员用户")
+    void deleteSuperAdminUserShouldFail() {
+        User superAdmin = new User();
+        superAdmin.setId(1L);
+        superAdmin.setUsername("superAdmin");
 
-        when(userMapper.selectList(any())).thenReturn(Arrays.asList(testUser, user2));
+        when(userMapper.selectById(1L)).thenReturn(superAdmin);
+        when(roleMapper.selectRoleCodesByUserId(1L)).thenReturn(List.of("SUPER_ADMIN"));
 
-        // When
-        // UserQueryDTO需要根据实际情况创建
-        // List<UserVO> users = userService.pageList(queryDTO);
+        assertThatThrownBy(() -> userService.deleteUser(1L))
+                .isInstanceOf(BusinessException.class)
+                .hasMessageContaining("不能删除超级管理员");
 
-        // 这里暂时注释掉，因为没有UserQueryDTO的具体实现
-        // TODO: 实现分页查询测试
+        verify(userMapper, never()).deleteById(any(User.class));
     }
 
     @Test
@@ -209,13 +228,12 @@ public class UserServiceTest {
 
         // 设置 UserContext
         UserContext.LoginUser loginUser = new UserContext.LoginUser();
-        loginUser.setUserId(1L);
+        loginUser.setUserId(2L);
         UserContext.setUser(loginUser);
 
-        // 使用真实 BCrypt 加密旧密码（Hutool BCrypt）
         testUser.setPassword(cn.hutool.crypto.digest.BCrypt.hashpw(oldPassword));
 
-        when(userMapper.selectById(1L)).thenReturn(testUser);
+        when(userMapper.selectById(2L)).thenReturn(testUser);
         when(userMapper.updateById(any(User.class))).thenReturn(1);
 
         // 创建 ChangePasswordDTO
@@ -229,27 +247,24 @@ public class UserServiceTest {
 
         // Then
         assertThat(result).isTrue();
-        verify(userMapper, times(1)).selectById(1L);
+        verify(userMapper, times(1)).selectById(2L);
         verify(userMapper, times(1)).updateById(any(User.class));
     }
 
     @Test
     @DisplayName("修改密码-旧密码错误")
     void testChangePassword_OldPasswordIncorrect() {
-        // Given
         String correctPassword = "password123";
         String wrongPassword = "wrongPassword";
         String newPassword = "newPassword456";
 
-        // 设置 UserContext
         UserContext.LoginUser loginUser = new UserContext.LoginUser();
-        loginUser.setUserId(1L);
+        loginUser.setUserId(2L);
         UserContext.setUser(loginUser);
 
-        // 使用真实 BCrypt 加密正确密码（Hutool BCrypt）
         testUser.setPassword(cn.hutool.crypto.digest.BCrypt.hashpw(correctPassword));
 
-        when(userMapper.selectById(1L)).thenReturn(testUser);
+        when(userMapper.selectById(2L)).thenReturn(testUser);
 
         // 创建 ChangePasswordDTO（使用错误的旧密码）
         ChangePasswordDTO changePasswordDTO = new ChangePasswordDTO();
@@ -262,7 +277,7 @@ public class UserServiceTest {
             .isInstanceOf(RuntimeException.class)
             .hasMessageContaining("当前密码错误");
 
-        verify(userMapper, times(1)).selectById(1L);
+        verify(userMapper, times(1)).selectById(2L);
         verify(userMapper, never()).updateById(any(User.class));
     }
 }
